# morai_test

./: .gitignore  README.md  pyproject.toml
configs/: competition_camera_gps_imu.json  competition_morai_erp.json  competition_morai_kcity_2026.json  competition_morai_live.json
docs/: competition_refactor_plan.md  competition_runtime_usage.md  final_completion_plan.md  final_reality_check.md  fix_and_hardening_plan.md  morai_erp_runtime.md  morai_kcity_2026_quickstart.md  morai_live_integration_plan.md  morai_live_usage.md  morai_sim_2025_final_udp_profile.json  morai_sim_workspace_reference.md  runtime_architecture.md  testing_and_validation.md
ros1/alpamayo1_5_ros/: CMakeLists.txt  package.xml
ros1/alpamayo1_5_ros/launch/: run_competition_erp.launch  run_competition_kcity_2026.launch  run_competition_live.launch
ros1/alpamayo1_5_ros/scripts/: run_competition_live_node.py
src/alpamayo1_5/: test_inference.py
src/alpamayo1_5/competition/: __init__.py  contracts.py
src/alpamayo1_5/competition/controllers/: __init__.py  controller_runtime.py  pid.py  pure_pursuit.py  stanley.py
tests/competition/: __init__.py  test_config.py  test_controller_and_safety.py  test_docs_smoke.py  test_hardening_edges.py  test_invalid_safety.py  test_legacy_serial_bridge.py  test_live_packet_assembly.py  test_live_runtime.py  test_morai_mapping.py  test_morai_publishers.py  test_morai_subscribers.py  test_pipeline.py  test_planner_and_wrapper.py  test_preprocess_and_packaging.py  test_ros_package_metadata.py  test_ros_wrapper.py  test_topic_registry.py
(+47 files in other folders)
