<?xml version="1.0"?>
<package format="2">
  <name>alpamayo1_5_ros</name>
  <version>0.1.0</version>
  <description>ROS1 wrapper package for the Alpamayo competition live runtime and direct MORAI /ctrl_cmd actuation path.</description>

  <maintainer email="noreply@example.com">Alpamayo Competition Runtime</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--
    Debug-only bring-up can still be exercised without direct actuation, but the
    ROS wrapper package intentionally declares morai_msgs because the active
    /ctrl_cmd path depends on morai_msgs/CtrlCmd in the sourced catkin workspace.
  -->
  <depend>morai_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export />
</package>
